--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard</a>
+    <a class="nav-element" href="/">Fitness Tracker</a>
+    <a class="nav-element" href="/stats">Dashboard</a>
   </nav>
   <div class="wrapper workout">
     <header>
